--- a/src/app/campgrounds/home/home.component.html
+++ b/src/app/campgrounds/home/home.component.html
@@ -79,7 +79,7 @@
       class="stats-card"
       [ngClass]="
         isUserAuthenticated
-          ? ['mat-elevation-z2']
+          ? ['mat-elevation-z2', 'stats-card-active']
           : ['mat-card-flat', 'mat-elevation-z0']
       "
     >
@@ -91,7 +91,7 @@
       class="stats-card"
       [ngClass]="
         isUserAuthenticated
-          ? ['mat-elevation-z2']
+          ? ['mat-elevation-z2', 'stats-card-active']
           : ['mat-card-flat', 'mat-elevation-z0']
       "
       [ngStyle]="getFlagColor()?.middle"
@@ -104,7 +104,7 @@
       class="stats-card"
       [ngClass]="
         isUserAuthenticated
-          ? ['mat-elevation-z2']
+          ? ['mat-elevation-z2', 'stats-card-active']
           : ['mat-card-flat', 'mat-elevation-z0']
       "
       [ngStyle]="getFlagColor()?.bottom"
