--- a/src/app/campgrounds/home/home.component.css
+++ b/src/app/campgrounds/home/home.component.css
@@ -80,12 +80,19 @@
 }
 /* * animation heartbeat Ends */
 
+.user {
+  background-color: rgba(255, 64, 129, 0.1);
+}
+
+.guest {
+  background-color: #e9ecef;
+}
+
 .banner {
   box-sizing: border-box;
   width: 60%;
   margin: 10px auto;
   padding: 32px;
-  background-color: #e9ecef;
   display: flex;
 }
 
@@ -189,8 +196,6 @@
   height: 300px;
   width: 30%;
   /* width: 240px; */
-  background-color: #e9ecef;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
