made changes to upload avatar on cloudinary from user choice image url, to minimize bad url risk from various avatar url sources

--- a/src/app/campgrounds/campground-create/campground-create.component.html
+++ b/src/app/campgrounds/campground-create/campground-create.component.html
@@ -315,7 +315,7 @@
   <a
     [disabled]="isLoading"
     mat-button
-    color="primary"
+    color="accent"
     class=".mat-body-strong campground-page-link"
     [routerLink]="['/campgrounds']"
     >Back to Campground's Page</a
