--- a/src/app/campgrounds/show-campground/show-campground.component.css
+++ b/src/app/campgrounds/show-campground/show-campground.component.css
@@ -174,6 +174,10 @@ mat-card-title {
   cursor: pointer;
 }
 
+.rated-by {
+  text-decoration: underline;
+}
+
 .chips-display {
   padding-bottom: 20px;
 }
