--- a/src/app/stats/users/all-users.component.html
+++ b/src/app/stats/users/all-users.component.html
@@ -43,7 +43,7 @@
         </ng-container>
 
         <ng-container matColumnDef="totalCampgrounds">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Campgrounds</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Camps</th>
           <td mat-cell *matCellDef="let row">
             {{ row.totalCampgrounds }}
           </td>
