--- a/src/app/stats/campgrounds/all-camps.component.css
+++ b/src/app/stats/campgrounds/all-camps.component.css
@@ -17,7 +17,10 @@
 }
 
 table {
-  width: 100%;
+  table-layout: auto;
+  /* width: 100%; */
+  overflow-x: auto;
+  min-width: 320px;
 }
 
 th.mat-sort-header-sorted {
@@ -32,4 +35,21 @@ th.mat-sort-header-sorted {
 td,
 th {
   width: 25%;
+}
+
+/* Add media queries to reduce font when width reduces */
+@media screen and (max-width: 500px) {
+  ::ng-deep .mat-header-cell,
+  ::ng-deep .mat-cell,
+  ::ng-deep .mat-footer-cell {
+    font-size: 80%;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  ::ng-deep .mat-header-cell,
+  ::ng-deep .mat-cell,
+  ::ng-deep .mat-footer-cell {
+    font-size: 60%;
+  }
 }
